exports[`DefineTitle React component Renders Default correctly 1`] = `
<dt
  className="defineTitle">
  Title 1
</dt>
`;

exports[`DefineTitle React component Renders Horizontally correctly 1`] = `
<dt
  className="defineTitle horizontal">
  Title 1
</dt>
`;

exports[`DefineTitle React component Renders Vertically correctly 1`] = `
<dt
  className="defineTitle vertical">
  Title 1
</dt>
`;
